--- a/Views/Templates/forecastControls.html
+++ b/Views/Templates/forecastControls.html
@@ -1,9 +1,9 @@
 <div class="forecastcontainer">
       <div class="forecast-controlbar">
                   <span>Forecast to</span>
-                  <i class="fctrl-leftarrow" ng-click="fCtrl.mthBk()">&#8882</i>
+                  <span class="actionbutton" ng-click="fCtrl.mthBk()">&#x022B3</span>
                   <span style="width: 10%; ">{{fCtrl.forecastParams.endDate | date:"mediumDate" : "UTC" }}</span>
-                  <i class="fctrl-rightarrow" ng-click="fCtrl.mthFwd()">&#x022B2</i>
+                  <span class="actionbutton" ng-click="fCtrl.mthFwd()">&#x022B2</span>
                   <span>Starting balance</span>
                   <input type="number" style="width:10%;" class="input-xs-flat" ng-model="fCtrl.forecastParams.startBal"
                   step="100" id="startbal"></input>
@@ -13,9 +13,7 @@
                         <label for="tableview">Table View</label>
                         <input id="tableview" type="radio" name="content" ng-model="fCtrl.forecastview" value="table">
                   </div>
-                  <button type="button" class="btn btn-primary btn-xs" ng-click="fCtrl.refresh()">
-                        <i class="glyphicon glyphicon-refresh"></i>
-                  </button>
+                  <span class="actionbutton" ng-click="fCtrl.refresh()">&#x021BB;</span>
       </div>
       <div ng-if="fCtrl.forecastview=='graph'">
             <stacked-bar class="graphcontainer clearfix" params="fCtrl.forecastParams"></stacked-bar>
