--- a/Views/Templates/transactionEditor.html
+++ b/Views/Templates/transactionEditor.html
@@ -1,36 +1,35 @@
 <div>
-    <div class="form-inline transactionEditor">
+    <div class="form-small">
         <h4>Add new transaction</h4>
-        <div class="form-group form-inline">
+        <div class="formfield">
             <label for="newitemName">Name</label>
             <input class="input-xs-flat" type="text" ng-model="transEditCtrl.trans.Name" placeholder="name" />
         </div>
-        <div class="form-group form-inline">
+        <div class="formfield">
             <label for="newitemDescription">Type</label>
             <select class="input-xs-flat" type="text" ng-options="type.ID as type.Description for type in ::transEditCtrl.types"
-            placeholder="type" ng-model="transEditCtrl.trans.TypeID" />
+            placeholder="type" ng-model="transEditCtrl.trans.TypeID"></select>
         </div>
-        <div class="form-group form-inline">
+        <div class="formfield">
             <label for="newitemAmount">Amount</label>
             <input class="input-xs-flat" type="number" step=10 ng-model="transEditCtrl.trans.TransactionValues[0].Value"
             placeholder="amount" />
         </div>
-        <div class="form-group form-inline">
+        <div class="formfield">
             <label for="newitemFreq">Occurs</label>
             <select class="input-xs-flat" type="text" ng-options="freq.ID as freq.Description for freq in ::transEditCtrl.frequencies"
-            placeholder="frequency" ng-model="transEditCtrl.trans.TransactionValues[0].FrequencyID" />
+            placeholder="frequency" ng-model="transEditCtrl.trans.TransactionValues[0].FrequencyID"></select>
         </div>
-        <div class="form-group form-inline">
+        <div class="formfield">
             <label for="newitemDay">On Day</label>
             <input class="input-xs-flat" type="number" step=1 max="30" ng-model="transEditCtrl.trans.TransactionValues[0].Day"
             placeholder="day" />
         </div>
-        <div class="form-group form-inline">
+        <div class="formfield">
             <label for="newitemStart">Start Date</label>
-            <input class="input-xs-flat" type="date" ng-model="transEditCtrl.trans.TransactionValues[0].Start_date"
-            />
+            <input class="input-xs-flat" type="date" ng-model="transEditCtrl.trans.TransactionValues[0].Start_date"/>
         </div>
-        <div class="form-group form-inline">
+        <div class="formfield">
             <label for="newitemStart">End Date</label>
             <input class="input-xs-flat" type="date" ng-model="transEditCtrl.trans.TransactionValues[0].End_date" />
         </div>
