bugfixes around api interaction

--- a/Styles/Site.scss
+++ b/Styles/Site.scss
@@ -16,7 +16,7 @@ header {justify-content: flex-end; height: 10%;background-color: #4a4444; box-sh
 
 main {margin: 8px;}
 
-/*UI*********************************/
+/*UI***************************************************************************************/
 a {text-decoration: none;}
 
 label{display:inline-block; width:60px;}
