--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -8,27 +8,12 @@ body {
   font-size: 16px;
   margin: 0; }
 
-header, main {
-  display: flex;
-  -webkit-flex-direction: row;
-  flex-direction: row;
-  flex: 1 100%; }
-
-header {
-  justify-content: flex-end;
-  height: 10%;
-  background-color: #4a4444;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); }
-  header div {
-    padding: 24px; }
-  header .titlebar {
-    flex: 4; }
-  header .loginpanel {
-    flex: 1; }
-
 main {
   margin: 8px; }
 
+.standard-box-shadow {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); 
+}
 /*UI*********************************/
 a {
   text-decoration: none; }
@@ -119,8 +104,7 @@ ul {
   #transactionlist .newitem {
     border-color: #6496c8; }
 
-.graphcontainer {
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); }
+/** Graphcontainer **/
   .graphcontainer text {
     fill: black;
     font: 10px sans-serif;
