--- a/Views/Templates/LoginRegister.html
+++ b/Views/Templates/LoginRegister.html
@@ -15,7 +15,7 @@
             <input type="text" class="input-xs-flat" id="emailAddress" placeholder="Username" ng-model="loginModalCtrl.loginForm.username">
             <input type="password" class="input-xs-flat" id="password" placeholder="Password" ng-model="loginModalCtrl.loginForm.password">
             <button class="btn btn-xs btn-primary" ng-click="loginModalCtrl.login()">Sign In</button>
-            <p ng-if="loginForm.errorMessage">{{loginForm.errorMessage}}</p>
+            <p ng-if="loginModalCtrl.loginForm.errorMessage">{{loginModalCtrl.loginForm.errorMessage}}</p>
         </form>
     </script>
     <script type="text/ng-template" id="Register.html">
